--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                     <div id="current-number" class="current-number">?</div>
                 </div>
 
+                <div class="pre-win-alert" id="pre-win-alert" style="display: none;">
+                    <div class="pre-win-icon">🎯</div>
+                    <div class="pre-win-text">Предвыигрышная ситуация!</div>
+                </div>
+
                 <div class="win-info" id="win-info" style="display: none;">
                     <div class="win-label">Выигрыш в туре:</div>
                     <div class="win-amount" id="win-amount">0 ₽</div>
