Add fullscreen mode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <div class="container">
+        <button id="fullscreen-button" class="fullscreen-button" title="Полноэкранный режим">
+            <span class="fullscreen-icon">⛶</span>
+        </button>
+
         <header>
             <h1>Русское лото</h1>
             <div class="lottery-info">
