Add end game state

--- a/index.html
+++ b/index.html
@@ -75,13 +75,34 @@
             </div>
         </div>
 
+        <div class="game-over" id="game-over" style="display: none;">
+            <h2>🎉 Тираж завершён! 🎉</h2>
+        </div>
+
         <div class="remaining-barrels" id="remaining-barrels" style="display: none;">
             <h3>Невыпавшие бочонки:</h3>
             <div id="remaining-list" class="remaining-list"></div>
         </div>
 
-        <div class="game-over" id="game-over" style="display: none;">
-            <h2>🎉 Тираж завершён! 🎉</h2>
+        <div class="results-table-container" id="results-table" style="display: none;">
+            <h2>Результаты тиража №1711</h2>
+            <p class="results-date">14 января 2026 18:00</p>
+
+            <div class="table-wrapper">
+                <table class="results-table">
+                    <thead>
+                        <tr>
+                            <th>Тур</th>
+                            <th>Порядок выпадения чисел</th>
+                            <th>Выигравших билетов</th>
+                            <th>Выигрыш, ₽</th>
+                        </tr>
+                    </thead>
+                    <tbody id="results-table-body">
+                        <!-- Данные будут добавлены через JavaScript -->
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
