--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
             <div class="info-panel">
                 <div class="tour-info">
-                    <h3>Тур <span id="current-tour">-</span></h3>
+                    <h3>
+                        Тур <span id="current-tour">-</span>
+                        <button id="tour-info-btn" class="tour-info-btn" title="Правила тура">ℹ️</button>
+                    </h3>
                     <div id="current-number" class="current-number">?</div>
                 </div>
 
@@ -72,6 +75,20 @@
                     <h4>Выпавшие числа:</h4>
                     <div id="numbers-list" class="numbers-list"></div>
                 </div>
+            </div>
+        </div>
+
+        <!-- Модальное окно с правилами тура -->
+        <div id="rules-modal" class="modal-backdrop" style="display: none;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <img id="rules-image" src="" alt="Правила тура" class="rules-image">
+                    <div class="rules-text">
+                        <h3 id="rules-title"></h3>
+                        <p id="rules-description"></p>
+                    </div>
+                </div>
+                <button id="close-rules" class="modal-close-btn">Хорошо</button>
             </div>
         </div>
 
